tests/rspack-test/configCases/errors/exception-in-chunk-renderer/test.filter.js
module.exports = () => "TODO: compilation.mainTemplate.hooks.requireExtensions not supported"
